// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 1`] = `
Object {
  "done": false,
  "value": Object {
    "id": "s00",
    "testData": "block-0",
    "type": "mock-type-1",
  },
}
`;

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 2`] = `
Object {
  "done": false,
  "value": Object {
    "id": "s01",
    "testData": "trial-0-0",
    "type": "mock-type-2",
  },
}
`;

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 3`] = `
Object {
  "done": false,
  "value": Object {
    "id": "s02",
    "testData": "trial-0-1",
    "type": "mock-type-2",
  },
}
`;

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 4`] = `
Object {
  "done": false,
  "value": Object {
    "id": "s03",
    "testData": "block-1",
    "type": "mock-type-1",
  },
}
`;

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 5`] = `
Object {
  "done": false,
  "value": Object {
    "id": "s04",
    "testData": "trial-1-0",
    "type": "mock-type-2",
  },
}
`;

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 6`] = `
Object {
  "done": false,
  "value": Object {
    "id": "s05",
    "testData": "trial-1-1",
    "type": "mock-type-2",
  },
}
`;

exports[`RunIterator#next iterates through each tasks (including trials and block inits) 7`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
